# PDF-Debugger-for-OSS-maintainers

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/: index.html  main.js  styles.css
scripts/: prepare-pdfium.js
src/: content_ops.rs  diagnostics.rs  lazy_deep_diagnostics.rs  lazy_diagnostics.rs  lazy_pdf.rs  lib.rs  main.rs  object_inspector.rs  object_tree.rs  page_index.rs  page_objects.rs  pdf_edit.rs  pdf_model.rs  pdf_parser.rs  pdf_string.rs  report.rs  stream_decode.rs  stream_viewer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: cli.rs  fixtures.rs
