[package]
name = "pdf-debugger"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdf_debugger"
path = "src/lib.rs"

[[bin]]
name = "pdf-debugger"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
memchr = "2.7"
memmap2 = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
