[package]
name = "pdf-debugger-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pdf_debugger = { package = "pdf-debugger", path = ".." }
pdfium-render = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
windows-sys = { version = "0.61.2", features = ["Win32_Graphics_Dwm"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
